[workspace]
members = [
    "packages/korabo-forum-api",
    "packages/korabo-forum-worker",
    "packages/forum-core"
]
resolver = "2"

[workspace.dependencies]
aws-config = "1.8.18"
axum = "0.8.9"
aws-sdk-dynamodb = "1.107.0"
aws_lambda_events = { version = "1.2.0", default-features = false, features = ["sqs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_dynamo = { version = "4.3.0" , features = ["aws-sdk-dynamodb+1"] }
forum-core = {path = "packages/forum-core"}
thiserror = "2.0.18"
serde_json = "1.0.150"
uuid = { version = "1.23.4", features = ["v4"] }
chrono = "0.4.45"
base64 = "0.22.1"
aws-sdk-s3 = "1.137.0"
aws-sdk-sqs = "1.102.0"
aws-sdk-ssm = "1.113.0"
tokio = { version = "1.52.3", features = ["macros"] }
jwt = { git = "https://github.com/AhmadAiman2013/korabo-common.git", tag = "0.9.0" }
lambda_http = "1.2.1"
lambda_runtime = "1.2.1"
tower-http = { version = "0.7.0", features = ["cors"] }
p256 = { version = "0.14", features = ["ecdsa"] }
ws-core = { git = "https://github.com/AhmadAiman2013/korabo-ws.git", tag = "0.3.0" }
group-core = { git = "https://github.com/AhmadAiman2013/korabo-groups", tag = "0.2.0" }
